examples/pass/basics/arithmetic.dew
// expect: 42
// Tier: Small
def main = fn { 40 + 2 -> stdout; };
