examples/fail/parse/bare_expr.dew
// expect error: [E002]
42 -> stdout;
